Adding Support for Queries on DynamoDB tables. Added a few more test cases