@@ -34,7 +34,9 @@ package project.benchmark;
 import org.openjdk.jmh.annotations.*;
 
 import project.dynamodb.AWSDynamoDB;
-
+import java.io.BufferedReader;
+import java.io.FileNotFoundException;
+import java.io.FileReader;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
@@ -47,11 +49,12 @@ import java.util.concurrent.TimeUnit;
 
 public class DynamoDBBenchmark {
     
-//	private int testTime;
-
+	private int queryCounter,scanCounter;
+	ArrayList<String> queryValues;
+	ArrayList<String> scanAttribute, scanOperand, scanValues;
+	AWSDynamoDB dynamoDBHelper;
+	
     @Param({
-            "Users_10",
-            "Users_100",
             "Users_1000",
             "Users_5000",
             "Users_10000"
@@ -60,14 +63,23 @@ public class DynamoDBBenchmark {
 
     @Setup
     public void loadTime(){
+    	queryCounter = 0;
+    	scanCounter = 0;
+    	
+    	queryValues = new ArrayList<String>();
+    	scanValues = new ArrayList<String>();
+    	scanOperand = new ArrayList<String>();
+    	scanAttribute = new ArrayList<String>();
+    	    	
     	String hostname = "http://localhost:8000";
     	String signingRegion = "us-east-1";
 
-    	AWSDynamoDB dynamoDBHelper = new AWSDynamoDB(hostname, signingRegion);
+    	dynamoDBHelper = new AWSDynamoDB(hostname, signingRegion);
 
     	List<String> tableAttributes = new ArrayList<String>();
     	tableAttributes.add("id");
 
+//    	Check if the table already exist. Create otherwise.
     	try {
     		//Check if table exists already
     		if(!dynamoDBHelper.doesTableExist(tableName)) {
@@ -76,56 +88,83 @@ public class DynamoDBBenchmark {
     		else {
     			System.out.println("Table exists. Skipping Table creation.");
     		}
-    		//Save data in python using batch write
-//    		dynamoDBHelper.saveData(tableName, primaryKey, imageInfoHashMap);
     	}
         catch (Exception e) {
             System.err.println("DynamoDB Exception: ");
             System.err.println(e.getMessage());
         }
 
+    	
+//    	Populate table with input data, the following logic could be moved to the previous try statement. TODO
     	final String dir = System.getProperty("user.dir");
     	java.nio.file.Path tool = java.nio.file.Paths.get(dir, "scripts", "csv_to_dynamodb.py");
-        String command = tool +" "+ tableName;
-
+        String command = "python3 " + tool +" "+ tableName;
 
         System.out.println("current dir = " + tool);
         System.out.println(command);
-        //Runtime.getRuntime().exec(run);
 
         try {
-        	String[] args = new String[] {"python3", tool.toString(), tableName};
-        	Process proc = new ProcessBuilder(args).start();
+        	Runtime.getRuntime().exec(command);
 		} catch (IOException e) {
 			// TODO Auto-generated catch block
+			try {
+	        	String[] args = new String[] {"/usr/local/bin/python3", tool.toString(), tableName};
+	        	Process proc = new ProcessBuilder(args).start();
+			} catch (IOException f) {
+				// TODO Auto-generated catch block
 
-	        System.out.println("Unable to run python command");
+		        System.out.println("Unable to run python command");
+			}
 		}
+
+
+//      Get elements to query for 
+        String csvFile = java.nio.file.Paths.get(dir, "testCases", tableName + "_queries_dynamo.csv").toString();
+
+        System.out.println(csvFile);
+        BufferedReader br = null;
+        String line = "";
+        String cvsSplitBy = ",";
+
         try {
-        	String[] args = new String[] {"/usr/local/bin/python3", tool.toString(), tableName};
-        	Process proc = new ProcessBuilder(args).start();
-		} catch (IOException e) {
-			// TODO Auto-generated catch block
 
-	        System.out.println("Unable to run python command");
-		}
-//    	testTime = Integer.parseInt(sleepTime);
+            br = new BufferedReader(new FileReader(csvFile));
+            while ((line = br.readLine()) != null) {
+
+                // use comma as separator
+                String[] currentUsrAtt = line.split(cvsSplitBy);
+                queryValues.add(currentUsrAtt[2]);
+
+            }
+
+        } catch (FileNotFoundException e) {
+            e.printStackTrace();
+        } catch (IOException e) {
+            e.printStackTrace();
+        } finally {
+            if (br != null) {
+                try {
+                    br.close();
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
     }
     
 	@Benchmark
-    public void testMethod() {
-//        System.out.println(tableName);
+    public void testQuery() {
+		dynamoDBHelper.getTableItem(tableName, "id", queryValues.get(queryCounter++), true);
+		System.out.println(queryValues.get(queryCounter));
+		if(queryCounter == queryValues.size())
+		{
+			queryCounter = 0;
+		}
     }
 
-//	@Benchmark
-//    public void alternateTest() {
-//        doMagic(testTime);
-//    }
-//    
-    public static void doMagic(int ms) {
-        try {
-            Thread.sleep(ms);
-        } catch (InterruptedException ignored) {
-        }
+	
+	@Benchmark
+    public void testScan() {
+//        System.out.println(tableName);
     }
 }
